--- a/css/index.css
+++ b/css/index.css
@@ -1,56 +1,100 @@
-/* Navbar CSS */
-.inline-block {
+body, h1, h2, h3, p, ul, li, button {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    line-height: 1.6;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.navigation {
+    background-color: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo img {
+    max-height: 50px;
+}
+
+nav ul {
+    list-style: none;
+}
+
+nav li {
     display: inline-block;
-    vertical-align: top;
+    margin-right: 20px;
 }
 
-.logo {
-    width: 23%;
-    padding: 1%;
-}
-
-nav {
-    width: 73%;
-    padding: 1%;
-}
-
-ul {
-    width: 50%;
-    margin-left: auto;
-}
-
-/* Hero Image CSS */
 .heroImg {
-    height: 600px;
-    padding: 25px;
     background-size: cover;
-    background-repeat: no-repeat;
+    background-position: center;
+    text-align: center;
+    padding: 100px 20px;
+    flex: 1;
 }
 
 .content {
-    width: 500px;
+    max-width: 800px;
     margin: 0 auto;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-/* Footer CSS */
+.heroImg img {
+    border-radius: 50%;
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+.heroImg p {
+    font-size: 18px;
+    color: #555;
+    margin-bottom: 20px;
+}
+
+button {
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
 footer {
-    background-color: #373738;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
     padding: 20px;
+    margin-top: auto;
 }
 
 footer ul {
-    display: inline-block;
-    vertical-align: top;
+    list-style: none;
 }
 
 footer li {
-    padding: 10px;
+    display: inline-block;
+    margin-right: 20px;
 }
 
-/* Font Family */
-body, p, li {
-    font-family: 'Your Chosen Font', sans-serif;
+@media screen and (max-width: 768px) {
+    .navigation {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    nav li {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
 }
-
-
