--- a/css/index.css
+++ b/css/index.css
@@ -6,15 +6,16 @@ body, h1, h2, h3, p, ul, li, button {
 body {
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f4;
-    color: #333;
-    line-height: 1.6;
+    color: #ffffff;
+    font-size: 18px;
+    line-height: 1;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
 }
 
 .navigation {
-    background-color: #fff;
+    background-color: #282828;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     padding: 10px;
     display: flex;
@@ -24,6 +25,7 @@ body {
 
 .logo img {
     max-height: 50px;
+    cursor: pointer;
 }
 
 nav ul {
@@ -33,6 +35,7 @@ nav ul {
 nav li {
     display: inline-block;
     margin-right: 20px;
+    cursor: pointer;
 }
 
 .heroImg {
@@ -56,24 +59,27 @@ nav li {
 }
 
 .heroImg p {
-    font-size: 18px;
-    color: #555;
+    font-size: 52px;
+    color: #fff;
     margin-bottom: 20px;
+    text-align: left;
+    line-height: 1.2;
 }
 
 button {
-    background-color: #007bff;
+    background-color: #46668A;
     color: #fff;
     padding: 10px 20px;
     font-size: 16px;
     border: none;
     cursor: pointer;
+    border-radius: 20px;
 }
 
 footer {
-    background-color: #333;
+    background-color: #282828;
     color: #fff;
-    text-align: center;
+    text-align: left;
     padding: 20px;
     margin-top: auto;
 }
@@ -85,6 +91,7 @@ footer ul {
 footer li {
     display: inline-block;
     margin-right: 20px;
+    cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
